src/scope/snapshots/rnix_analyzer__scope__tests__scope_let_in_error_already_defined.snap
---
source: src/scope/mod.rs
expression: errors
---
[
    Scope(
        AlreadyDefined(
            LetIn,
            "a",
            [11; 12),
            [4; 5),
        ),
    ),
]
