src/scope/snapshots/rnix_analyzer__scope__tests__scope_let_in_error_inherit_already_defined.snap
---
source: src/scope/mod.rs
expression: errors
---
[
    Scope(
        AlreadyDefined(
            LetIn,
            "builtins",
            [26; 34),
            [4; 12),
        ),
    ),
    Reference(
        NotFoundInScope(
            "a",
            [39; 40),
        ),
    ),
]
