src/scope/snapshots/rnix_analyzer__scope__tests__scope_let_in_error_inherit_already_defined_as_string.snap
---
source: src/scope/mod.rs
expression: errors
---
[
    Scope(
        AlreadyDefined(
            LetIn,
            "builtins",
            [28; 36),
            [4; 14),
        ),
    ),
]
