src/scope/snapshots/rnix_analyzer__scope__tests__scope_let_in_error_inherit_already_defined_order_for_inherit.snap
---
source: src/scope/mod.rs
expression: "format!(\"{}\\n=========\\n{:#?}\", nix_code, errors)"
---
let inherit builtins; builtins = 2; in builtins + builtins
=========
[
    Scope(
        AlreadyDefined(
            LetIn,
            "builtins",
            [22; 30),
            [12; 20),
        ),
    ),
]
