src/scope/snapshots/rnix_analyzer__scope__tests__scope_let_in_error_inherit_from_already_defined.snap
---
source: src/scope/mod.rs
expression: "format!(\"{}\\n=========\\n{:#?}\", nix_code, errors)"

---
let a = 2; inherit (builtins) a; in a + a
=========
[
    Scope(
        AlreadyDefined(
            LetIn,
            "a",
            30..31,
            4..5,
        ),
    ),
]
