src/scope/snapshots/rnix_analyzer__scope__tests__scope_let_in_error_nested_attr_already_defined_in_parent.snap
---
source: src/scope/mod.rs
expression: errors
---
[
    Scope(
        AlreadyDefined(
            LetIn,
            "a.b",
            [20; 23),
            [10; 11),
        ),
    ),
]
