src/scope/snapshots/rnix_analyzer__scope__tests__scope_recursive_attr_set_error_already_defined.snap
---
source: src/scope/mod.rs
expression: "format!(\"{}\\n=========\\n{:#?}\", nix_code, errors)"
---
rec {
            a = 1;
            b = a;
            b = 2;
        }
=========
[
    Scope(
        AlreadyDefined(
            RecursiveAttrSet,
            "b",
            [56; 57),
            [37; 38),
        ),
    ),
]
